--- a/src/components/intro.pug
+++ b/src/components/intro.pug
@@ -40,8 +40,9 @@ mixin rates-intro()
             img(src="@img/rates-intro-bg-sm.png", alt="" draggable="false")
         .intro__body.container
             .intro__breadcrumbs
-                <a href="#" class="intro__breadcrumbs-item">Для учителя ></a> 
-                <a href="#" class="intro__breadcrumbs-item active">Курсы повышения квалификации</a>
+                .intro__breadcrumbs-row 
+                    <a href="#" class="intro__breadcrumbs-item">Для учителя ></a> 
+                    <a href="#" class="intro__breadcrumbs-item active">Курсы повышения квалификации</a>
             h1.intro__title КУРСЫ ПОВЫШЕНИЕ КВАЛИФИКАЦИИ 
             p.intro__p.small Получи официальные документы установленного образца о повышении квалификации в соотвествии с ФГОС 
             .intro__row 
@@ -74,8 +75,9 @@ mixin retrainingIntro()
             img(src="@img/retraining-intro-bg-sm.png", alt="" draggable="false")
         .intro__body.container
             .intro__breadcrumbs
-                <a href="#" class="intro__breadcrumbs-item">Для учителя ></a> 
-                <a href="#" class="intro__breadcrumbs-item active">Курсы профессиональной переподготовки</a>
+                .intro__breadcrumbs-row 
+                    <a href="#" class="intro__breadcrumbs-item">Для учителя ></a> 
+                    <a href="#" class="intro__breadcrumbs-item active">Курсы профессиональной переподготовки</a>
             h1.intro__title КУРСЫ ПРОФЕССИОНАЛЬНОЙ ПЕРЕПОДГОТОВКИ
             p.intro__p.small Получи официальные документы установленного образца о переподготовке в соотвествии с ФГОС 
             .intro__row 
@@ -106,8 +108,9 @@ mixin olympiads-intro()
             img(src="@img/olympiads-intro-bg.png", alt="" draggable="false")
         .intro__body.container
             .intro__breadcrumbs
-            <a href="#" class="intro__breadcrumbs-item">Для учителя ></a> 
-            <a href="#" class="intro__breadcrumbs-item active">Онлайн олимпиады</a>
+                .intro__breadcrumbs-row 
+                    <a href="#" class="intro__breadcrumbs-item">Для учителя ></a> 
+                    <a href="#" class="intro__breadcrumbs-item active">Онлайн олимпиады</a>
             .intro__flex
                 .intro__left
                     h1.intro__title Примите участие в олимпиаде и #[span получите диплом] победителя всего за #[span 2 минуты]
@@ -147,8 +150,9 @@ mixin internal-intro()
             img(src="@img/olympiads-intro-bg.png", alt="" draggable="false")
         .intro__body.container
             .intro__breadcrumbs
-                <a href="#" class="intro__breadcrumbs-item">Для учителя ></a> 
-                <a href="#" class="intro__breadcrumbs-item active">Онлайн олимпиады > Олимпиады для студентов</a>
+                .intro__breadcrumbs-row 
+                    <a href="#" class="intro__breadcrumbs-item">Для учителя ></a> 
+                    <a href="#" class="intro__breadcrumbs-item active">Онлайн олимпиады > Олимпиады для студентов</a>
             .intro__flex
                 .intro__left
                     h1.intro__title Олимпиады для #[span студентов] по самым разным темам 
@@ -173,8 +177,9 @@ mixin ultimate-intro()
             img(src="@img/olympiads-intro-bg.png", alt="" draggable="false")
         .intro__body.container
             .intro__breadcrumbs
-                <a href="#" class="intro__breadcrumbs-item">Для учителя ></a> 
-                <a href="#" class="intro__breadcrumbs-item active">Онлайн олимпиады > Олимпиады по медецине > Олипмиада “МДК «Безопасная среда для пациента и персонала»"</a>
+                .intro__breadcrumbs-row 
+                    <a href="#" class="intro__breadcrumbs-item">Для учителя ></a> 
+                    <a href="#" class="intro__breadcrumbs-item active">Онлайн олимпиады > Олимпиады по медецине > Олипмиада “МДК «Безопасная среда для пациента и персонала»"</a>
             .intro__flex
                 .intro__left
                     h1.intro__title Олимпиада "МДК «Безопасная среда для пациента и персонала»"
@@ -198,8 +203,9 @@ mixin compets-intro()
             img(src="@img/olympiads-intro-bg.png", alt="" draggable="false")
         .intro__body.container
             .intro__breadcrumbs
-                <a href="#" class="intro__breadcrumbs-item">Для учителя ></a> 
-                <a href="#" class="intro__breadcrumbs-item active">Творческий конкурс</a>
+                .intro__breadcrumbs-row 
+                    <a href="#" class="intro__breadcrumbs-item">Для учителя ></a> 
+                    <a href="#" class="intro__breadcrumbs-item active">Творческий конкурс</a>
             .intro__flex
                 .intro__left
                     h1.intro__title Бесплатные ФГОС конкурсы для педагогов и учащихся
@@ -224,8 +230,9 @@ mixin songs-intro()
             img(src="@img/olympiads-intro-bg.png", alt="" draggable="false")
         .intro__body.container
             .intro__breadcrumbs
-                <a href="#" class="intro__breadcrumbs-item">Для учителя ></a> 
-                <a href="#" class="intro__breadcrumbs-item active">Творческий конкурс > Конкурс авторской песни</a>
+                .intro__breadcrumbs-row 
+                    <a href="#" class="intro__breadcrumbs-item">Для учителя ></a> 
+                    <a href="#" class="intro__breadcrumbs-item active">Творческий конкурс > Конкурс авторской песни</a>
             .intro__flex
                 .intro__left
                     h1.intro__title Бесплатный конкурс авторской песни
@@ -251,8 +258,9 @@ mixin publications-intro()
         .intro__body.container
             .publications__left
                 .intro__breadcrumbs
-                    <a href="#" class="intro__breadcrumbs-item">Для учителя ></a> 
-                    <a href="#" class="intro__breadcrumbs-item active">Публикации в СМИ или печатном издании</a>
+                    .intro__breadcrumbs-row 
+                        <a href="#" class="intro__breadcrumbs-item">Для учителя ></a> 
+                        <a href="#" class="intro__breadcrumbs-item active">Публикации в СМИ или печатном издании</a>
                 .intro__left
                     h1.intro__title Публикация для воспитателей детских садов и педагогов
                     p.intro__p.small Опубликуем ваш материал на сайте или в печатном издании, чтобы попасть в очередной сборник Вам необходимо подать заявку сегодня.
@@ -284,8 +292,10 @@ mixin media-intro()
         .intro__body.container
             .publications__left
                 .intro__breadcrumbs
-                    <a href="#" class="intro__breadcrumbs-item">Для учителя ></a> 
-                    <a href="#" class="intro__breadcrumbs-item active">Публикации в СМИ или печатном издании > Публикация статьи в на потрале</a>
+                    .intro__breadcrumbs-row 
+                        <a href="#" class="intro__breadcrumbs-item">Для учителя ></a> 
+                        <a href="#" class="intro__breadcrumbs-item active">Публикации в СМИ или печатном издании ></a>
+                        <a href="#" class="intro__breadcrumbs-item active">Публикация статьи в на потрале</a>
                 .intro__left
                     h1.intro__title Опубликовать статью в СМИ бесплатно с сертификатом
                     p.intro__p.small Опубликуем ваш материал на сайте или в печатном издании, чтобы попасть в очередной сборник Вам необходимо подать заявку сегодня.
@@ -306,3 +316,17 @@ mixin media-intro()
                                 </svg>
                                 | Личный кабинет
                             p.intro__btn-p Вы можете войти без регистрации
+
+mixin introAdmin()
+    section.intro#intro.intro_admin
+        .intro__bg 
+            img(src="@img/intro-admin.png", alt="" draggable="false")
+        .intro__bg-sm
+            img(src="@img/intro-admin.png", alt="" draggable="false")
+        .intro__body.container
+            .intro__breadcrumbs
+                .intro__breadcrumbs-row 
+                    <a href="#" class="intro__breadcrumbs-item">Для учителя ></a> 
+                    <a href="#" class="intro__breadcrumbs-item">Иванов Иван Иванович ></a>
+                    <a href="#" class="intro__breadcrumbs-item active">Мои документы</a>
+                a(href="index.html").intro__breadcrumbs-btn Выйти из личного кабинета → 
