--- a/src/scss/layout/_people.scss
+++ b/src/scss/layout/_people.scss
@@ -24,9 +24,12 @@
             @include res('bottom', -97px);
             @include res('width', 1490px);
             @include res('height', 240px);
+            @include res('border-top-left-radius', 30px);
+            @include res('border-bottom-left-radius', 30px);
             @include media(575){
                 width: 100%;
                 @include resa('height', 100px);
+                border-radius: 0;
             }
         }
         .people{
