--- a/src/components/teachers.pug
+++ b/src/components/teachers.pug
@@ -425,3 +425,33 @@ mixin media-teachers()
                             p.teachers__subtitle Бесплатное участие
                     .teachers__image 
                         img(src="@img/media-girl.png", alt="" draggable="false")
+                .teachers__row 
+                    .teachers__item
+                        h2.teachers__title Для публикации Вашей статьи на потрале заполните форму:
+                        .teachers__media-row
+                            .teachers__left 
+                                .teachers__flex 
+                                    form(action="").teachers__form
+                                        input(type="text" placeholder="Введите ваше имя, фамилию и отчество" required).teachers__input
+                                        input(type="email" placeholder="Введите ваш e-mail" required).teachers__input
+                                        input(type="text" placeholder="Введите тему вашей работы" required).teachers__input
+                                        p.teachers__form-subtitle Прикрепите файл со статьей:
+                                        p.teachers__form-info Максимальный размер файла: 20МБ
+                                        .teachers__texts 
+                                            a(href="#!").teachers__link
+                                                img(src="@img/clip.svg", alt="" draggable="false")
+                                                | Прикрепить конкурсную работу
+                                            p.teachers__info Сейчас файл не выбран
+                            .teachers__right    
+                                .teachers__subtitles
+                                    p.teachers__right-p Вы получите такое свидетельство
+                                .teachers__diploma
+                                    img(src="@img/patterns-img.png", alt="" draggable="false")
+                        h2.teachers__title.sm Краткое описание Вашей статьи:
+                        .teachers__form-img 
+                            img(src="@img/form.png", alt="" draggable="false")
+                        p.teachers__txt Символов: 0
+                        .teachers__checkbox 
+                            input(type="checkbox" id="checkbox1" required).teachers__checkbox-input
+                            label(for="checkbox1").teachers__label Опубликовать на моей странице социальной сети 
+                        button(type="submit").teachers__btn Опубликовать статью на сайте
