--- a/src/components/training.pug
+++ b/src/components/training.pug
@@ -73,4 +73,32 @@ mixin olympiads-training()
                     img(src="@img/training-img-3.png", alt="" draggable="false")
                 .training__item-right 
                     p.training__item-title Резидент Сколково
+                    a(href="#!").training__item-link Выписка из реестра → 
+
+mixin media-training()
+    .training.training__olympiads.training__media
+        .training__body.container 
+            .training__row 
+                .training__wrapper
+                    .training__images 
+                        .training__image 
+                            img(src="@img/training-img-1.png", alt="" draggable="false")
+                        .training__image 
+                            img(src="@img/training-img-2.png", alt="" draggable="false")
+                    .training__item.disable-sm 
+                        .training__item-img 
+                            img(src="@img/training-img-3.png", alt="" draggable="false")
+                        .training__item-right 
+                            p.training__item-title Резидент Сколково
+                            a(href="#!").training__item-link Выписка из реестра →  
+                .training__info 
+                    h2.training__title ЛИЦЕНЗИРОВАННЫЙ УЧЕБНЫЙ ПЕДАГОГИЧЕСКИЙ ЦЕНТР
+                    p.training__desc Наш учебный центр входит в реестр аккредитованных организаций, предоставляющих услуги в сфере образования. Наши курсы проводятся в дистанционной форме. 
+                    p.training__desc Мы имеем официальную лицензию на ведение образовательной деятельности, выданной Министерством образования и науки  РФ (лицензия на ведение образовательной деятельности №9757-л).
+                    button(type="button").training__btn Заявка на консультацию
+            .training__item.enable-sm 
+                .training__item-img 
+                    img(src="@img/training-img-3.png", alt="" draggable="false")
+                .training__item-right 
+                    p.training__item-title Резидент Сколково
                     a(href="#!").training__item-link Выписка из реестра →  
