--- a/src/media.pug
+++ b/src/media.pug
@@ -15,16 +15,14 @@ html(lang="en")
                 +media-intro
                 include components/teachers
                 +media-teachers
+                include components/training
+                +media-training
+                include components/accept
+                +media-accept
                 include components/people
                 +publications-people
-                include components/tutorial
-                +tutorial
-                include components/training
-                +olympiads-training
-                include components/diplomas
-                +publications-diplomas
                 include components/patterns
-                +patterns 
+                +media-patterns 
                 include components/templates
                 +templates 
                 include components/reviews 
