--- a/src/components/intro.pug
+++ b/src/components/intro.pug
@@ -294,7 +294,7 @@ mixin media-intro()
                 .intro__breadcrumbs
                     .intro__breadcrumbs-row 
                         <a href="#" class="intro__breadcrumbs-item">Для учителя ></a> 
-                        <a href="#" class="intro__breadcrumbs-item active">Публикации в СМИ или печатном издании ></a>
+                        <a href="#" class="intro__breadcrumbs-item">Публикации в СМИ или печатном издании ></a>
                         <a href="#" class="intro__breadcrumbs-item active">Публикация статьи в на потрале</a>
                 .intro__left
                     h1.intro__title Опубликовать статью в СМИ бесплатно с сертификатом
