--- a/src/scss/layout/_cabinet.scss
+++ b/src/scss/layout/_cabinet.scss
@@ -1,6 +1,7 @@
 .cabinet{
     @include res('margin-top', -223px);
     @include res('min-height', 900px);
+    @include res('padding-bottom', 50px);
     position: relative;
     z-index: 5;
     &__body{
@@ -129,11 +130,63 @@
             @include res('padding-top', 14px);
             @include res('padding-left', 16px);
             @include res('padding-right', 16px);
-            @include res('padding-bottom', 5px);
+            @include res('padding-bottom', 10px);
             display: flex;
             flex-direction: column;
             align-items: flex-start;
             @include res('width', 190px);
+            &-img{
+                width: 100%;
+                @include res('height', 190px);
+                @include res('border-radius', 10px);
+                @include res('margin-bottom', 10px);
+                overflow: hidden;
+                line-height: 0;
+                img{
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+            &-btn{
+                background: #325CFE;
+                color: #fff;
+                text-align: center;
+                @include res('font-size', 12px);
+                font-style: normal;
+                font-weight: 500;
+                line-height: 140%;
+                @include res('height', 38px);
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                @include res('padding-left', 10px);
+                @include res('padding-right', 10px);
+                @include res('border-radius', 8px);
+                border: solid #325CFE;
+                @include res('border-width', 1px);
+                transition: 300ms ease-out;
+                width: 100%;
+                @include res('margin-bottom', 5px);
+                transition: background 300ms ease-out;
+                &:hover{
+                    background: #4b70fe;
+                }
+            }
+            &-delete{
+                color: rgba(50, 92, 254, 0.60);
+                text-align: center;
+                @include res('font-size', 12px);
+                font-style: normal;
+                font-weight: 500;
+                line-height: 160%;
+                text-decoration-line: underline;
+                margin-left: auto;
+                margin-right: auto;
+                transition: color 300ms ease-out;
+                &:hover{
+                    color: #325CFE;
+                }
+            }
         }
         &-chk{
             @include res('margin-bottom', 10px);
@@ -290,7 +343,10 @@
             @include res('border-radius', 8px);
             border: solid #325CFE;
             @include res('border-width', 1px);
-            transition: 300ms ease-out;
+            transition: background 300ms ease-out;
+            &:hover{
+                background: #4b70fe;
+            }
         }
         &-input{
             color: #484848;
